--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.7.1",
     "@types/jest": "23.3.10",
     "@types/node": "10.12.18",
     "@types/react": "16.7.18",
@@ -10,9 +11,9 @@
     "apollo-boost": "^0.1.23",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
-    "react": "^16.7.0",
+    "react": "^16.7.0-alpha.2",
     "react-apollo": "^2.3.3",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.7.0-alpha.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "tslint": "^5.12.0",
