--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "apollo-boost": "^0.1.23",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
+    "prettier": "^1.15.3",
     "react": "^16.7.0-alpha.2",
     "react-apollo": "^2.3.3",
     "react-dom": "^16.7.0-alpha.2",
