--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,12 @@
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
     "apollo-boost": "^0.1.23",
+    "apollo-cache-inmemory": "^1.4.2",
+    "apollo-link-context": "^1.0.12",
+    "apollo-link-http": "^1.5.9",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
+    "path": "^0.12.7",
     "prettier": "^1.15.3",
     "react": "^16.7.0-alpha.2",
     "react-apollo": "^2.3.3",
@@ -36,6 +40,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/react-router-dom": "^4.3.1"
+    "@types/react-router-dom": "^4.3.1",
+    "dotenv": "^6.2.0"
   }
 }
